errorstack/tests/compile_fail/multiple_sources.stderr
error: variant `Conflict` has multiple source fields
 --> tests/compile_fail/multiple_sources.rs:8:9
  |
8 |         other: std::io::Error,
  |         ^^^^^
